<resources>
    <string name="app_name">Mi Remember Miscellaneous</string>
    <string name="action_settings">Settings</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_action_bar_compat_styled">ActionBarCompatStyled</string>
    <string name="actionBarCompatMain_description">Items</string>
    <string name="choose_pulse_message">
        <![CDATA[
            Choose one from the below list of Items.
        ]]>
    </string>
    <string name="choose_associate_message">
        <![CDATA[
            Choose one from the below list of Roots.
        ]]>
    </string>
    <string name="add_associate_note">
        <![CDATA[
            Note: From below, new Root can be created, or
                  choose from existing Roots/Items.
        ]]>
    </string>
    <string name="add_pulse">Add Item</string>
    <string name="edit_pulse">Edit Item</string>
    <string name="view_pulse">View Item</string>
    <string name="update_pulse">Update Item</string>
    <string name="pulseCreatedLabel">Item Created</string>
    <string name="salary">Pulse Salary</string>
    <string name="PulseUpdateLabel">Update</string>
    <string name="add">Add Now</string>
    <string name="edit">Edit Complete</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="add_allied">Add Root</string>
    <string name="edit_allied">Edit Root</string>
    <string name="view_allied">View Root</string>
    <string name="sliding_items_allied">One Root with Dependents</string>
    <string name="update_allied">Update Root</string>
    <string name="alliedCreatedLabel">Root Created</string>
    <string name="menuClose">Close</string>
    <string name="menuShare">Share Item</string>
    <string name="menuEdit">Edit Item</string>
    <string name="menuDelete">Delete Item</string>
    <string name="done">Done</string>
    <string name="cancal">Cancel</string>
    <string name="search_hint">Search Item Name..</string>
    <string name="search_label">Search Label..</string>
    <string name="date_format">MMM dd,  hh:mm a</string>
    <string name="pulse_name_hint">Give a name to Item</string>
    <string name="associate_name_hint">Give a name to Root</string>
    <string name="pulse_desc_hint">Item description will come here..</string>
    <string name="associate_desc_hint"></string>
    <string name="pulse_dependent_count_text">Not a Root</string>
    <string name="pulse_dependent_count_text_exist">Dependent :</string>
    <string name="associate_dependent_count_text">No dependent exist</string>
    <string name="associate_dependent_count__exist">: Dependent</string>
    <string name="date_time_text">the date time</string>
    <string name="pulseAddDone">Done</string>
    <string name="pulseAddReset">Reset</string>
    <string name="pulseNameLabel">Item Name:</string>
    <string name="pulseNameHint">Item Name will come here..</string>
    <string name="alliedNameLabel">Root Name:</string>
    <string name="alliedNameHint">Root Name will come here..</string>
    <string name="alliedDescLabel">Root Description:</string>
    <string name="alliedDescHint">Root Description will come here..</string>
    <string name="editAssociateImage">Edit Root Image</string>
    <string name="editRootDone">Done</string>
    <string name="rootEditReset">Ignore Changes</string>
    <string name="addDependent">Add Dependent Items</string>
    <string name="editRootSlidingTab">Edit Root</string>
    <string name="pref_general_profile">General Settings</string>
    <string name="pref_autoSave_name">Auto Save</string>
    <string name="pref_autoSave_summary">The auto save feature (if Selected) will allow to save the data automatically, without pressing the Done button</string>
    <string name="itemsPerPageMainScreen">Main screen, Show Roots screen</string>
    <string name="itemsPerPageSummary">Choose the number of items that
        can be shown on <b>Main screen</b> and <b>Show Roots screen</b>.\n\n
        Changes will be applicable after the application is re-started..
    </string>
    <string name="itemsPerPageDependentScreen">One Root Many Dependents screen</string>
    <string name="itemsPerPageDependentScreenSummary">Choose the number of items that
        can be shown on <b>One Root Many Dependents screen</b>.\n\n
        Changes will be applicable after the application is re-started.
    </string>
    <string name="about_main_screen">About This Screen</string>
    <string name="pref_main_screen">Main Screen Help</string>
    <string name="pref_main_screen_summary_Title_1">2 Pictures Side by Side</string>
    <string name="pref_main_screen_summary_Title_2">Blue Background</string>
    <string name="pref_main_screen_summary_Title_3">Search</string>
    <string name="pref_main_screen_summary_Title_4">Dependent</string>
    <string name="pref_main_screen_summary_Title_5">Items Per Page</string>
    <string name="pref_main_screen_summary_Title_6">Delete</string>
    <string name="pref_main_screen_summary_Title_7">Backup</string>
    <string name="pref_main_screen_summary_Title_8">Restore</string>
        <string name="pref_main_screen_summary_1"><![CDATA[ This screen: \n
      Show\'s 2 pictures side by side one is Item and other is its Root.
 ]]></string>
    <string name="pref_main_screen_summary_2">
        <![CDATA[
      Item can be identified with Blue background color. And its roots (yellow like background) is shown side by side.
 ]]>
    </string>
    <string name="pref_main_screen_summary_3">
        <![CDATA[
      An Item can be Searched by its name or by its description.

 ]]>
    </string>
     <string name="pref_main_screen_summary_4"><![CDATA[
      Dependent, will take you to the dependent screen which will show all the dependent items.\n\n
      At that screen user can:\n
      1). Add Dependent\n\n
      2). Edit Dependent\n\n
      3). See Detail\n\n
 ]]></string>
    <string name="pref_main_screen_summary_5">
        <![CDATA[
      To increase the number of \'Items - Roots\' combination on per page. From first screen:\n\n
      \'Menu\' -> \'Settings\' ->
       click [ Choose Items Per Page (Main screen , Show Roots screen)]
 ]]>
    </string>
    <string name="pref_main_screen_summary_6"><![CDATA[
      To delete any item click on blue background and then Delete. Or go to Edit Item
 ]]></string>
    <string name="pref_main_screen_summary_7"><![CDATA[

    User can take backup of their data [including pictures,name,description] created with this app.\n\n
    User can reach to backup location from Main Screen Menu -> Go to Back-up folder.\n\n
    Everytime new backup is created, old backup is renamed with \'Date and Time\' suffix.
    \nRemember: The latest backup will have complete application data, so you can archive the old backup and remove it from your handset. So it will save memory.
 ]]></string>
    <string name="pref_main_screen_summary_8"><![CDATA[
    Note: Restoring backup data will delete your existing data from application.\n
    User can restore their data created through the app.\n
    How: Simply put app \"Backup\" folder in the app folder\n
    User can reach to [app folder] backup location from \nMain Screen Menu -> Go to Back-up folder.\n
 ]]></string>
    <string name="pref_add_item_screen">Add Item Screen</string>
    <string name="pref_add_pulse_screen_summary_Title_1">Purpose of the Screen</string>
    <string name="pref_add_pulse_screen_summary_Title_2">Different way to create root</string>
    <string name="pref_add_pulse_screen_summary_Title_3">Auto-Save</string>
    <string name="pref_add_pulse_screen_summary_1">
        <![CDATA[
      Add an Item and also its Root.
 ]]>
    </string>
    <string name="pref_add_pulse_screen_summary_2"><![CDATA[
      Create Root in one of the three ways: \n\n
        i.  Choose from existing Root, Or\n\n
        ii. Create new Root, Or\n\n
        iii.  Choose from existing items and that Item will become a Root.
 ]]></string>
    <string name="pref_add_pulse_screen_summary_3">
        <![CDATA[
      Auto-Save is on by deafult.\n\n

         To disable the auto-save feature go to first screen:\n\n
          Menu ->  Settings -> Auto-Save
 ]]>
    </string>
    <string name="pref_add_root_screen">Add Root Screen</string>
    <string name="pref_add_allied_screen_summary_title_1">Purpose of the Screen</string>
    <string name="pref_add_allied_screen_summary_1"><![CDATA[
      Create New Root. ]]>
    </string>
    <string name="pref_add_allied_screen_summary_title_2">New Root</string>
    <string name="pref_add_allied_screen_summary_2"><![CDATA[
      Please enter [All Optional]\n
      Picture, Name , Description  ]]>
    </string>
    <string name="pref_allied_list_screen">Root List Screen</string>
    <string name="pref_allied_list_screen_summary_title_1">Purpose of the Screen</string>
    <string name="pref_allied_list_screen_summary_title_3">Yellow like Background</string>
    <string name="pref_allied_list_screen_summary_title_4">Search</string>
    <string name="pref_allied_list_screen_summary_title_5">Dependent</string>
    <string name="pref_allied_list_screen_summary_title_6">Items Per Page</string>
    <string name="pref_allied_list_screen_summary_title_7">Delete</string>
    <string name="pref_allied_list_screen_summary_1"><![CDATA[
      This screen show all the roots page wise.]]>
    </string>
    <string name="pref_allied_list_screen_summary_3">
        <![CDATA[
      Roots can be identified with Yellow like background color.
 ]]>
    </string>
    <string name="pref_allied_list_screen_summary_4">
        <![CDATA[
      A Root can be Searched by its name or by its description.
 ]]>
    </string>
     <string name="pref_allied_list_screen_summary_5"><![CDATA[
      Dependent, will take you to the dependent screen which will show all the dependent items.
 ]]></string>
    <string name="pref_allied_list_screen_summary_6">
        <![CDATA[
      To increase the number of \'Roots\' per page. From first screen: \n\n
      \'Menu\' -> \'Settings\' ->
       click [ Choose Items Per Page (Main screen , Show Roots screen)]
 ]]>
    </string>
    <string name="pref_allied_list_screen_summary_7"><![CDATA[
      To delete any Root click on Yellow like background and then Delete. Or go to Edit Root -> Menu
 ]]></string>
    <string name="pref_dependent_screen">One Root with Dependents Screen</string>
    <string name="pref_dependent_screen_summary_title_1">Purpose of the Screen</string>
    <string name="pref_dependent_screen_summary_title_2">Add Dependent Items</string>
    <string name="pref_dependent_screen_summary_title_3">Edit Dependent Items</string>
    <string name="pref_dependent_screen_summary_title_4">Scroll Dependent Items</string>
    <string name="pref_dependent_screen_summary_title_5">Delete Dependent Items</string>
    <string name="pref_dependent_screen_summary_title_6">Items Per Page</string>
    <string name="pref_dependent_screen_summary_1">Root is on upper-half of the screen, and \n its dependent lower-half of the screen</string>
    <string name="pref_dependent_screen_summary_2">On this page go to Menu -> Add Dependent</string>
    <string name="pref_dependent_screen_summary_3">Scroll down and click \'Edit\'</string>
    <string name="pref_dependent_screen_summary_4">Move finger Left-to-Right to see all dependents</string>
    <string name="pref_dependent_screen_summary_5">Scroll down and click \'Edit\' or \'Show Detail\', then click \'Delete\'</string>
    <string name="pref_dependent_screen_summary_6"><![CDATA[
      To increase the number of \'Dependent\' per page. From first screen: \n\n
      \'Menu\' -> \'Settings\' ->
       click [ Choose Items Per Page (One Root Many Dependent screen)]
 ]]></string>
    <string name="itemsPerPage">Items Per Page</string>
    <string name="dependentPerPage">Count of Dependents Per Page</string>
</resources>