<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_dependent_screen">
        <Preference
            android:title="@string/pref_dependent_screen_summary_title_4"
            android:summary="@string/pref_dependent_screen_summary_4"
            android:key="aboutApp4"
            android:icon="@drawable/dependent"/>
        <Preference
            android:title="@string/pref_dependent_screen_summary_title_1"
            android:summary="@string/pref_dependent_screen_summary_1"
            android:key="aboutApp1"
            android:icon="@drawable/ic_info_outline_black_36dp"/>
        <Preference
            android:title="@string/pref_dependent_screen_summary_title_2"
            android:summary="@string/pref_dependent_screen_summary_2"
            android:key="aboutApp2"/>
        <Preference
            android:title="@string/pref_dependent_screen_summary_title_3"
            android:summary="@string/pref_dependent_screen_summary_3"
            android:key="aboutApp3"
            android:icon="@drawable/ic_mode_edit_black_24dp"/>
        <Preference
            android:title="@string/pref_dependent_screen_summary_title_5"
            android:summary="@string/pref_dependent_screen_summary_5"
            android:key="aboutApp5"
            android:icon="@drawable/ic_delete_black_24dp"/>
        <Preference
            android:title="@string/pref_dependent_screen_summary_title_6"
            android:summary="@string/pref_dependent_screen_summary_6"
            android:key="aboutApp6"
            android:icon="@drawable/items_per_page"/>
    </PreferenceCategory>

</PreferenceScreen>