<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_add_item_screen">
        <Preference
            android:title="@string/pref_add_pulse_screen_summary_Title_1"
            android:summary="@string/pref_add_pulse_screen_summary_1"
            android:key="aboutApp1"
            android:icon="@drawable/ic_info_outline_black_36dp"/>
        <Preference
            android:title="@string/pref_add_pulse_screen_summary_Title_2"
            android:summary="@string/pref_add_pulse_screen_summary_2"
            android:key="aboutApp2"/>
        <Preference
            android:title="@string/pref_add_pulse_screen_summary_Title_3"
            android:summary="@string/pref_add_pulse_screen_summary_3"
            android:key="aboutApp3"
            android:icon="@drawable/ic_save_black_48dp"/>
    </PreferenceCategory>

</PreferenceScreen>